Component updates and content updates to support component changes

--- a/docs/content/concepts/sui-move-concepts/packages/custom-policies.mdx
+++ b/docs/content/concepts/sui-move-concepts/packages/custom-policies.mdx
@@ -338,7 +338,7 @@ sui client publish --gas-budget 100000000
 
 <details>
   <summary>
-  Toggle output
+  Console output
   </summary>
 
 A successful publish returns the following:
@@ -436,7 +436,7 @@ sui client call --gas-budget 10000000 \
 
 <details>
   <summary>
-  Toggle output
+  Console output
   </summary>
 
 A successful call returns the following:
@@ -637,10 +637,8 @@ console.log(result);
 
 <details>
   <summary>
-  Toggle complete script
+  `publish.js`
   </summary>
-
-The complete `publish.js` script follows:
 
 ```js
 import { execSync } from 'child_process';
@@ -720,7 +718,7 @@ node publish.js
 
 <details>
   <summary>
-  Toggle output
+  Console output
   </summary>
 
 If the script is successful, the console prints the following response:
@@ -803,7 +801,7 @@ sui client call --gas-budget 10000000 \
 
 <details>
   <summary>
-  Toggle output
+  Console output
   </summary>
 
 A successful call responds with the following:
@@ -967,7 +965,7 @@ node upgrade.js
 
 <details>
   <summary>
-  Toggle output
+  Console output
   </summary>
 
 If the script is successful (and today is Tuesday), your console displays the following response:
@@ -1046,7 +1044,7 @@ sui client call --gas-budget 10000000 \
 
 <details>
   <summary>
-  Toggle output
+  Console output
   </summary>
 
 If successful, the console prints the following response:
