--- a/docs/content/guides/developer/app-examples/tic-tac-toe.mdx
+++ b/docs/content/guides/developer/app-examples/tic-tac-toe.mdx
@@ -33,7 +33,7 @@ An alternative version of this game, shared tic-tac-toe, uses shared objects for
 
 <details>
 <summary>
-Toggle full source code
+`owned.move`
 </summary>
 {@inject: examples/tic-tac-toe/move/sources/owned.move}
 </details>
@@ -56,7 +56,7 @@ Instead of the game being sent to the game admin, it is instantiated as a shared
 
 <details>
 <summary>
-Toggle full source code
+`shared.move`
 </summary>
 {@inject: examples/tic-tac-toe/move/sources/shared.move}
 </details>
@@ -89,7 +89,7 @@ export function multiSigPublicKey(keys: PublicKey[]): MultiSigPublicKey {
 
 <details>
 <summary>
-Toggle full source code
+`MultiSig.ts`
 </summary>
 {@inject: examples/tic-tac-toe/ui/src/MultiSig.ts}
 </details>
@@ -122,7 +122,7 @@ newMultiSigGame(player: PublicKey, opponent: PublicKey): Transaction {
 
 <details>
 <summary>
-Toggle full source code
+`useTransactions.ts`
 </summary>
 {@inject: examples/tic-tac-toe/ui/src/hooks/useTransactions.ts}
 </details>
@@ -198,7 +198,7 @@ function OwnedGame({
 
 <details>
 <summary>
-Toggle full source code
+`Game.tsx`
 </summary>
 {@inject: examples/tic-tac-toe/ui/src/pages/Game.tsx}
 </details>
