--- a/docs/content/guides/developer/nft/asset-tokenization.mdx
+++ b/docs/content/guides/developer/nft/asset-tokenization.mdx
@@ -808,7 +808,7 @@ xxd -c 0 -p build/template/bytecode_modules/template.mv | head -n 1
 
 <details>
   <summary>
-  Toggle response
+  Console response
   </summary>
 
 The response you should receive looks similar to the following:
